# MoveMeMate

./: .gitignore  README.md  doc_proc.py  faiss.index  generator.py  main.py  meta.pkl  pyproject.toml  requirements.txt
index-and-chunks/: chunks.jsonl  cleaned_docs.jsonl
old/: main.py
old/models/llama3-8b/models--meta-llama--Llama-3.1-8B-Instruct/: LICENSE  README.md  USE_POLICY.md  config.json  generation_config.json  model.safetensors.index.json
